# backend

./: .coveragerc  .flake8  .gitignore  README.md  manage.py  manage_db.py  project_deployment.md  pyproject.toml  pytest.ini
apps/accounts/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/accounts/management/commands/: populate_db.py
apps/storage/: admin.py  models.py  serializers.py  urls.py  validators.py  views.py
config/: general_config.py  logging_config.py  my_cloud_config.py
docs/: project_deployment.md
my_cloud_project/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: populate_db.py
tests/: conftest.py
tests/api_tests/apps/accounts/: conftest.py  test_api_admin.py  test_api_auth.py  test_api_delete_users.py  test_api_get_users.py  test_api_patch_users_toggle.py  test_api_update_users.py  test_api_users_permission.py
tests/api_tests/apps/storage/: test_api_storage.py
tests/api_tests/endpoints/: accounts_url.py  storage_url.py
tests/base_test_class/: base_test_api_class.py
tests/config/base_test_class/: base_test_api_class.py
tests/config/data_factories/: fake_files_factory.py  fake_users_factory.py  simple_upload_file_factory.py
tests/data_factories/: fake_files_factory.py
tests/units/: test_file_models.py  test_user_models.py
