[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Smorodin_SA <ssmorodin@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
django = "^6.0.2"
djangorestframework = "^3.16.1"
psycopg2-binary = "^2.9.11"
python-dotenv = "^1.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-django = "^4.12.0"
black = "^26.1.0"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
